--- a/environment.yml
+++ b/environment.yml
@@ -2,63 +2,15 @@ name: deep_dream_env
 channels:
   - defaults
 dependencies:
-  - certifi=2018.8.24=py35_1
-  - python=3.5.6=he025d50_0
+  - certifi=2020.4.5.1=py36_0
+  - pip=20.0.2=py36_1
+  - python=3.6.10=h9f7ef89_1
+  - setuptools=46.1.3=py36_0
+  - sqlite=3.31.1=h2a8f88b_1
   - vc=14.1=h0510ff6_4
   - vs2015_runtime=14.16.27012=hf0eaf9b_1
-  - wheel=0.31.1=py35_0
-  - wincertstore=0.2=py35hfebbdb8_0
-  - pip:
-    - absl-py==0.9.0
-    - astor==0.8.1
-    - astroid==2.3.3
-    - bleach==1.5.0
-    - cachetools==4.0.0
-    - chardet==3.0.4
-    - colorama==0.4.3
-    - cycler==0.10.0
-    - enum34==1.1.6
-    - gast==0.2.2
-    - google-auth==1.10.0
-    - google-auth-oauthlib==0.4.1
-    - google-pasta==0.1.8
-    - grpcio==1.26.0
-    - h5py==2.10.0
-    - html5lib==0.9999999
-    - idna==2.8
-    - isort==4.3.21
-    - keras-applications==1.0.8
-    - keras-preprocessing==1.1.0
-    - kiwisolver==1.1.0
-    - lazy-object-proxy==1.4.3
-    - markdown==3.1.1
-    - matplotlib==3.0.3
-    - mccabe==0.6.1
-    - numpy==1.18.0
-    - oauthlib==3.1.0
-    - opt-einsum==3.1.0
-    - pillow==6.2.1
-    - pip==19.3.1
-    - protobuf==3.11.2
-    - pyasn1==0.4.8
-    - pyasn1-modules==0.2.7
-    - pylint==2.4.4
-    - pyparsing==2.4.6
-    - python-dateutil==2.8.1
-    - requests==2.22.0
-    - requests-oauthlib==1.3.0
-    - rsa==4.0
-    - setuptools==43.0.0
-    - six==1.13.0
-    - tensorboard==2.0.2
-    - tensorflow==1.4.0
-    - tensorflow-estimator==2.0.1
-    - tensorflow-tensorboard==0.4.0
-    - termcolor==1.1.0
-    - typed-ast==1.4.0
-    - urllib3==1.25.7
-    - werkzeug==0.16.0
-    - wrapt==1.11.2
-    - zipfile36==0.1.3
-prefix: C:\Users\bbuen\Miniconda3\envs\deep_dream_env
+  - wheel=0.34.2=py36_0
+  - wincertstore=0.2=py36h7fe50ca_0
+  - zlib=1.2.11=h62dcd97_4
+prefix: C:\Users\bbuen\.conda\envs\deep_dream_env
 
